--- a/src/scss/admin/tools/_variables.scss
+++ b/src/scss/admin/tools/_variables.scss
@@ -557,7 +557,7 @@ $k-tree-spacing:                    $k-list-spacing !default;
 $k-tree-size:                       $k-element-small-size !default;
 
 $k-tree-element-start-spacing:      $k-spacing !default;
-$k-tree-element-end-spacing:        $k-tiny-spacing !default;
+$k-tree-element-end-spacing:        $k-small-spacing !default;
 
 $k-tree-element-hover-background:   lighter($k-sidebar-background) !default;
 
